<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/timer_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <ProgressBar
        android:id="@+id/timer_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:background="@drawable/drawable_circle_dark_blue"
        android:indeterminate="false"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/drawable_circle_purple"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/timer_tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_default"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_timer"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/timer_progress_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/timer_progress_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timer_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:id="@+id/timer_start_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_unfocus"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin"
            android:paddingTop="@dimen/margin_small"
            android:paddingRight="@dimen/margin"
            android:paddingBottom="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/timer_tv_set_time"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:id="@+id/timer_button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer_start"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/timer_tv_set_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timer_set_time"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/timer_cancel_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_unfocus"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin"
            android:paddingTop="@dimen/margin_small"
            android:paddingRight="@dimen/margin"
            android:paddingBottom="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/timer_tv_set_time"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/timer_txt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer_cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>